# kicad-keyboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
docs/: plan.md
simulator/: README.md  __init__.py  api.py  example.py  footprint.py  grin_simulator.py  kle_layout.py  visualizer.py
simulator/layouts/: standard_35_kle.json
tests/: README.md  __init__.py  conftest.py  test_api.py  test_footprint.py  test_grin_simulator.py  test_kle_layout.py  test_visualizer.py
