[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-keyboard"
version = "0.1.0"
description = "Tools and simulator for exploring the Grin array keyboard layout."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[tool.uv]
package = false
