[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-keyboard"
version = "0.1.0"
description = "Tools and simulator for exploring the Grin array keyboard layout."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=simulator",
    "--cov-report=term-missing",
    "--cov-report=html",
]
